# prompt-wars

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONCEPT.md  Dockerfile  LICENSE  Procfile  README.md  TODO.md  app.json  backfill_sha.py  conftest.py  create_game_score.py  djsfc.py  example.env  gemini_redo_max_tokens.py  lint.sh  manage.py  moderation_experiment.py  playstyle.py  pyproject.toml  run.sh  set_game_score.py  tmp.py  tmp2.py  validate_game_score.py  verify_ordering.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
django_scheduler/: admin.py  apps.py  models.py  models_tests.py
django_scheduler/migrations/: 0001_initial.py
docs/: SEO.md  data-model.md  design-tensions.md  game-migration.md  labirynth.md  lineages.md  parallels.md  rounds.md  strategy.md
embedding_explorer/: apps.py  models.py  tests.py  views.py  voyage.py
embedding_explorer/migrations/: 0001_initial.py
guessing/: admin.py  apps.py  models.py  tests.py  views.py
guessing/migrations/: 0001_initial.py
labirynth/: apps.py  factories.py  fixtures.py  index.py  index_tests.py  map_view.py  map_view_tests.py  models.py  regenerate_top_down.py
labirynth/migrations/: 0001_initial.py  0002_roomversion.py  0003_remove_roomversion_room_remove_roomversion_user_and_more.py
llm_wars/: asgi.py  data_policy_view.py  data_policy_view_tests.py  settings.py  urls.py  wsgi.py
stories/: admin.py  fixtures.py  models.py  models_tests.py
stories/migrations/: 0001_initial.py  0002_delete_chunk.py
templates/: base.html  exact_text.html  home.html  time.html
templates/registration/: login.html  signup.html
templates/warriors/: arena_detail.html  arena_list.html  battle_detail.html  challenge_warrior.html  recent_battles.html  upcoming_battles.html  warrior_create.html  warrior_detail.html  warrior_leaderboard.html  warriorarena_detail.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
users/tests/: factories.py  fixtures.py  test_views.py
warriors/: admin.py  anthropic.py  apps.py  battles.py  battles_tests.py  challenge_matchmaking.py  challenge_matchmaking_tests.py  create_view.py  create_view_tests.py  cross_arena.py  cross_arena_tests.py  embeddings.py  forms.py  google.py  google_tests.py  lcs.py  matchmaking_challenge.py  matchmaking_challenge_tests.py  models.py  my_warriors_view.py  my_warriors_view_tests.py  openai.py  random_matchmaking.py  random_matchmaking_tests.py  rating.py  rating_models.py  rating_models_tests.py  rating_tests.py  scheduler.py  score.py  score_tests.py  stats.py  stats_tests.py  tasks.py  text_unit.py  text_unit_tests.py  views.py  warrior_detail_view.py  warrior_detail_view_tests.py  warrior_view.py  (+2 more)
warriors/llms/: anthropic.py  anthropic_tests.py  exceptions.py  google.py  google_tests.py  openai.py  openai_tests.py
warriors/migrations/: 0001_initial.py  0002_warrior_games_played_warrior_moderation_date_and_more.py  0003_alter_warrior_options_and_more.py  0004_alter_battle_warrior_1_rating_and_more.py  0005_rename_moderation_flagged_warrior_moderation_passed.py  0006_alter_battle_options.py  0007_warrior_body_sha_256.py  0008_battle_lcs_len_1_2_1_battle_lcs_len_1_2_2_and_more.py  0009_alter_warrior_author_alter_warrior_name.py  0010_remove_battle_warrior_1_rating_and_more.py  0011_rename_author_warrior_author_name_warrior_created_by_and_more.py  0012_alter_battle_scheduled_at.py  0013_warrior_rating_error.py  0014_battle_finish_reason_1_2_battle_finish_reason_2_1.py  0015_alter_battle_lcs_len_1_2_1_and_more.py  0016_remove_warrior_rating_index_warrior_rating_index.py  0017_arena_battle_arena_warrior_arena.py  0018_alter_battle_arena_alter_warrior_arena_and_more.py  0019_warrior_rating_error_non_negative.py  0020_arena_site.py  0021_arena_llm.py  0022_arena_listed.py  0023_arena_description.py  0024_warrioruserpermission_name.py  0025_warrior_rating_playstyle.py  0026_warrior_rating_fit_loss.py  0027_remove_warrior_rating_error_non_negative_and_more.py  0028_warrior_public_battle_results_and_more.py  0029_arenastats_remove_warrior_rating_index_and_more.py  0030_rename_warrior_warriorarena.py  0031_rename_warrior_warrioruserpermission_warrior_arena.py  0032_warrior_and_more.py  0033_remove_warriorarena_next_battle_schedule_index_and_more.py  (+26 more)
(+22 files in other folders)
