[tool.poetry]
name = "prompt-wars"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
django = "==4.2.*"
openai = "*"
django-environ = "*"
psycopg = "*"
django-recaptcha = "*"
sentry-sdk = {extras = ["django"], version = "*"}
gunicorn = "*"
whitenoise = "*"
anthropic = "*"
numpy = "*"
scipy = "*"
django-goals = {url = "https://github.com/EE/django-goals/archive/12ae9fb81e0c6a63bf91faf045e76e22729bcfb3.zip"}
humanize = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-isort = "*"
pylint = "*"
pytest = "*"
pytest-django = "*"
pylint-django = "*"
flake8-pyproject = "*"
factory-boy = "*"
aider-chat = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = [
    "E501",  # line too long
]

[tool.isort]
skip_gitignore = true
lines_after_imports = 2
# 5 = Hanging Grid Grouped
multi_line_output = 5
include_trailing_comma = true

[tool.pylint.format]
recursive = "yes"
errors-only = "yes"
load-plugins = [
    "pylint_django",
]

[tool.pylint.pylint_django]
django-settings-module = "llm_wars.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "llm_wars.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
FAIL_INVALID_TEMPLATE_VARS = true
addopts = "--reuse-db"

[tool.black]
skip-string-normalization = true
